# ef_example_todo

./: .gitignore  FirstStage.Dockerfile  README.md  build_docker.sh  build_docker_with_proxy_1st.sh
backend/: .env  Cargo.toml  README.md  spin.toml
backend/schema/: create.sql
backend/src/: lib.rs  todo.rs
docker/: build_app_images.sh  build_backend.sh  build_frontend.sh  docker-compose-1node.yml  init_pg.sql  todo_backend.Dockerfile  todo_frontend.Dockerfile
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  state.rs
