[package]
name    = "todo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
spin-sdk ={ git = "https://github.com/fermyon/spin", tag = "v1.1.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
form_urlencoded = "1.1"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"
eightfish = { package = "eightfish", git = "https://github.com/eightfish-org/eightfish", branch = "dev"}
eightfish-derive = { package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish", branch = "dev"}
spin_worker = { package = "spin_worker", git = "https://github.com/eightfish-org/eightfish", branch = "dev"}
#eightfish = { package = "eightfish", path = "../../eightfish"}
#eightfish-derive = { package = "eightfish-derive", path = "../../eightfish/eightfish-derive"}
#spin_worker = { package = "spin_worker", path = "../../eightfish/spin_worker"}

[workspace]


