[package]
name    = "todo"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
spin-sdk = "3.0"
form_urlencoded = "1.1"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"
sql-builder = "3.1"

# eightfish-sdk = { package = "eightfish-sdk", git = "https://github.com/eightfish-org/eightfish" }
# eightfish-derive = { package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish"}
# spin_worker = { package = "spin_worker", git = "https://github.com/eightfish-org/eightfish" }
eightfish-sdk = { package = "eightfish-sdk", path = "../../eightfish/sdk"}
eightfish-derive = { package = "eightfish-derive", path = "../../eightfish/eightfish-derive"}
spin_worker = { package = "spin_worker", path = "../../eightfish/spin_worker"}


[workspace]


