[package]
name = "oda-todo"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
gloo = "0.8"
serde = "1"
serde_derive = "1"
wasm-bindgen-futures = "0.4"
strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]